--- a/src/asset/css/loginForm.css
+++ b/src/asset/css/loginForm.css
@@ -1,3 +1,7 @@
+#root{
+    width:100%;
+    height:100%;
+}
 #loginForm{
     position: absolute;
     width: 50%;
@@ -12,7 +16,7 @@
 }
 #siginupForm{
     position: absolute;
-    width: 50%;
+    width: 52%;
     height: 308px;
     top :0;
     left: 0;
@@ -44,7 +48,7 @@
 @media (max-width:940px){
     #loginForm{
       display: block;
-      height:338px;
+      height:468px;
     }
     .login-form{
         margin: auto;
@@ -52,5 +56,8 @@
     .login-form-button{
         margin:auto 5% auto 5%;
         width: 40%;
+    }
+    .login-form-button:nth-child(3){
+        width:90%;
     }
 } 
