--- a/src/asset/css/loginForm.css
+++ b/src/asset/css/loginForm.css
@@ -79,6 +79,7 @@
     background: #fe6500;
     margin: 16px;
     font-size: 25px;
+    font-weight: 800;
     color: white;
     border-radius: 100px;
     text-align: center;
