--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background:url('./asset/img/signInbg.png');
+  background: #5f5f5f;
   background-size: 100% 100%;
   font-family: sans-serif;
 }
