--- a/src/components/mainscore/MainScoreBoard.css
+++ b/src/components/mainscore/MainScoreBoard.css
@@ -1,5 +1,6 @@
 .ant-table-tbody{
     color:white;
+    background: #2b3e50;
 }
 .ant-table-tbody>tr:hover:not(.ant-table-expanded-row):not(.ant-table-row-selected)>td {
 background: #367490;
