--- a/src/components/mainscore/MainScoreInput.css
+++ b/src/components/mainscore/MainScoreInput.css
@@ -1,3 +1,7 @@
 .ant-table-tbody > tr > td{
     padding:10px !important;
 }
+
+.attendTitle> .ant-input-wrapper> .ant-input{
+    color:black !important;
+}
